--- a/data source (not gzipped)/index.html
+++ b/data source (not gzipped)/index.html
@@ -101,10 +101,10 @@
                 <div class="cardContent">
                     <h1>Download</h1>
                     <p>You can download a copy of the data as a csv file.</p>
-                    <a href="Water Quality Data.csv">
+                    <a href="Water_Quality_Data.csv">
                         <div class="cardButton">View Data</div>
                     </a>
-                    <a href="Water Quality Data.csv" download="Water Quality Data.csv">
+                    <a href="Water_Quality_Data.csv" download="Water_Quality_Data.csv">
                         <div class="cardButton">Download Data</div>
                     </a>
                 </div>
@@ -284,7 +284,7 @@
                 chart_pH.render()
             }
         };
-        xhttp.open("GET", "Water Quality Data.csv", true);
+        xhttp.open("GET", "Water_Quality_Data.csv", true);
         xhttp.send();
     }
 
